use docker-snpeff only.

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,10 +7,7 @@ profiles {
     local {
         process.executor = 'local'
         process {
-            withName:decomposeNormalize {
-                container = 'sinonkt/docker-vt:latest'
-            }
-            withName:annotation {
+            withName:decomposeNormalizeAnnotate {
                 container = 'sinonkt/docker-snpeff:latest'
             }
             withName:geminiLoad {
